--- a/todo-list-electron/index.html
+++ b/todo-list-electron/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>todo-ball</title>
+    <title>我的待办</title>
 </head>
 <body>
 <div id="root"></div>
